--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=SuDecy99_test2_l
-sonar.login= SuDecy99 
+sonar.login= SuDecy99
 sonar.organization=sudecy99-1
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=testing-task1
+sonar.projectName=test2_l
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
